# parallel-vectors

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: interval.h  main.cpp
